Allow to send javaArgs in options (#14)